force-app/main/default/objects/AuthSettings__c/AuthSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>AuthSettings</label>
</CustomObject>