force-app/main/default/objects/AuthSettings__c/fields/Facebook_oAuth_link__c.field-meta.xml
<CustomField>
    <fullName>Facebook_oAuth_link__c</fullName>
    <description>link that user goes to when the facebook registration link happens.  It should include the link on facebook.  Parameters for the site url and &quot;first page after registration&quot; are separate custom settings</description>
    <label>Facebook oAuth Registration link</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>