force-app/main/default/objects/AuthSettings__c/fields/Facebook_OAuth_Link_Link__c.field-meta.xml
<CustomField>
    <fullName>Facebook_OAuth_Link_Link__c</fullName>
    <inlineHelpText>for linking existing user accounts</inlineHelpText>
    <label>Facebook OAuth Link Link</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>