force-app/main/default/objects/AuthSettings__c/fields/Facebook_OAuth_Login_Link__c.field-meta.xml
<CustomField>
    <fullName>Facebook_OAuth_Login_Link__c</fullName>
    <inlineHelpText>where the customer goes for login-only flow</inlineHelpText>
    <label>Facebook OAuth Login Link</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>