force-app/main/default/objects/AuthSettings__c/fields/TrueCost_Post_registration_start_page__c.field-meta.xml
<CustomField>
    <fullName>TrueCost_Post_registration_start_page__c</fullName>
    <defaultValue>&quot;/addaddressafterregistration&quot;</defaultValue>
    <description>relative link for where the customer goes post-registration (standard is /addaddressafterregistration)</description>
    <inlineHelpText>relative link for where the customer goes post-registration</inlineHelpText>
    <label>TrueCost Post-registration start page</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>