force-app/main/default/objects/AuthSettings__c/fields/TrueCost_RegisterPage__c.field-meta.xml
<CustomField>
    <fullName>TrueCost_RegisterPage__c</fullName>
    <defaultValue>&quot;https://centerpointenergy.secure.force.com/RegisterSec&quot;</defaultValue>
    <description>where the TrueCost registration page is located</description>
    <inlineHelpText>where the TrueCost registration page is located</inlineHelpText>
    <label>TrueCost RegisterPage</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>