force-app/main/default/objects/AuthSettings__c/fields/TrueCost_Secure_URL__c.field-meta.xml
<CustomField>
    <fullName>TrueCost_Secure_URL__c</fullName>
    <description>Secure url for TrueCost, like secure.centerpointenergy.force.com (PRD) or https://qa-centerpointenergy.cs13.force.com for sandboxes</description>
    <inlineHelpText>Secure url for TrueCost, like secure.centerpointenergy.force.com (PRD) or https://qa-centerpointenergy.cs13.force.com for sandboxes</inlineHelpText>
    <label>TrueCost Secure URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>